--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -170,7 +170,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 48px;
+    // margin-top: 48px;
     padding: 8px 16px;
   }
 }
